Attempt to stop select2 from flipping upwards on small screens
https://github.com/DVD27/select2/blob/feb69c071ae5d2b92d7e24584d52cb8349
5cbaee/src/js/select2/dropdown/attachBody.js

--- a/woocommerce/inventory.css
+++ b/woocommerce/inventory.css
@@ -17,6 +17,10 @@
 .select2-dropdown {
   border:none !important;
 }
+/*prevents dropdown from flipping upwards on small screens when search results are filtered enough to have "enoughRoomAbove" */
+.select2-results {
+  min-height: 1000px;
+}
 
 /* for tiny screens */
 .fl-col-small {
